<resources>
    <string name="app_name">Medayi Slide</string>
    <string name="input_your_number">Input your phone number</string>
    <string name="input_your_id">Input your Medayi ID</string>
    <string name="input_your_name">Input your name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="instructions">Click on UNLOCK button to unlock the screen</string>
    <string name="unlock">Unlock Screen</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="choose_lang1">Your chocie</string>
    <string name="choose_lang2">\t\tfor a better</string>
    <string name="choose_lang3">life in</string>
    <string name="choose_lang4">Medayi</string>
    <string name="choose_lan_title">Choose Langauge</string>
    <string name="start">START</string>
    <string name="get_paid_by"> By using our App. we provide variety contents. Such as latest news, local informations and saving points.  </string>
    <string name="get_paid_by_your"> You can get point after slide to unlock on your lockscreen  </string>
    <string name="if_your_slide"> By using points. you can buy top-up cards. products from online shopping malls and you can even change the points to real money </string>
    <string name="point_will_be"> Points will be awarded depending on the number below. </string>
    <string name="i_collect"> Although you don\'t have point. you can enjoy all the latest  news and local informations in Cambodia </string>
    <string name="total_point">You can check, The points on medayi Medayi app</string>
    <string name="portal_in"> Share this lovely app with your friends </string>
    <string name="you_can_look"> You can know about \n useful local informations</string>
    <string name="change_the_point"> Medayi slide is the new type of advertisement platform by using lockscreen. </string>
    <string name="enter_the_pwd"> Enter the password and enter the points to change money. Point can be cashed through a Wing account. </string>
    <string name="login_title"> LOGIN  </string>
    <string name="request_id"> Find Medayi ID </string>
    <string name="your_name_here"> Your name here </string>
    <string name="request"> SUBMIT </string>
    <string name="join_medayi"> Join MEDAYI  </string>
    <string name="i_already"> I already have a MEDAYI account  </string>
    <string name="forget_id_pass"> <u>Forget <b>Medayi ID</b> or <b>Password ?</b></u>  </string>
    <string name="find_id"> Find Medayi ID  </string>
    <string name="find_pass"> Find Password  </string>
    <string name="request_title"> Find Medayi Password  </string>
    <string name="your_id_here"> Your Medayi ID </string>
    <string name="msg_id_no_reg"> No have your ID in Medayi </string>
    <string name="msg_num_not_sam_id"> Your phone number not same with ID </string>
    <string name="write_your_password"> Write your \n password </string>
    <string name="write_pw_com"> Write your new password </string>
    <string name="phone_no">  Phone number </string>
    <string name="apply">APPLY</string>
    <string name="welcome">Welcome! you\'re Joined Medayi as Enter your phone number to Start</string>
    <string name="validatePhone">Input your correct phone number!</string>
    <string name="msg_wait">Press button Apply again, If don\'t receive sms after </string>
    <string name="registered">Your phone number has been register</string>
    <string name="confirmNumber">CONFIRM</string>
    <string name="cam">Cambodia</string>
    <string name="ko">South Korea</string>
    <string-array name="country">
        <item>@string/cam </item>
        <item>@string/ko</item>
    </string-array>
    <string name="please_rememer_id"> Please remember your Medayi Id </string>
    <string name="information">Information</string>
    <string name="medayi_id"> Medayi ID </string>
    <string name="pwd"> Password </string>
    <string name="pwd_4_char"> Password at least 4 charactor </string>
    <string name="pwd_not"> Password at least 4 charactor </string>
    <string name="id_have"> ID already have </string>
    <string name="pwd_4_char_sy"> At Least 4 characters and not allow space, symbol </string>
    <string name="conf_pwd"> Confirm password </string>
    <string name="next"> Next </string>
    <string name="dt_forget">Don\'t forget your</string>
    <string name="id_pwd">ID &amp; Password</string>
    <string name="your_name"> Your name </string>
    <string name="name_title"> What\'s your\n name? </string>
    <string name="select_gender"> Select your Gender </string>
    <string name="ask_gender">Are you Man\n or Woman?</string>
    <string name="age"> Age </string>
    <string name="ask_age">How old\n are you?</string>
    <string name="location"> Location</string>
    <string name="location_title"> Where\'re\n you living? </string>
    <string-array name="list_province">
        <item>Phnom Penh</item>
        <item>Siem Reap</item>
        <item>Ta Khmao</item>
        <item>Battambang</item>
        <item>Sihanoukville</item>
        <item>Kampong Cham</item>
        <item>Tboung Khmum</item>
        <item>Krong Kep</item>
        <item>Kampot</item>
        <item>Koh Kong</item>
        <item>Banteay Meanchey</item>
        <item>Kampong Chhnang</item>
        <item>Kampong Speu</item>
        <item>Kampong Thom</item>
        <item>Kratié</item>
        <item>Mondulkiri</item>
        <item>Oddar Meanchey</item>
        <item>Pailin</item>
        <item>Preah Vihear</item>
        <item>Pursat</item>
        <item>Prey Veng</item>
        <item>Ratanakiri</item>
        <item>Stung Treng</item>
        <item>Svay Rieng</item>
        <item>Takéo</item>
    </string-array>
    <string name="national"> National </string>
    <string name="national_title"> Where\'re\n you from? </string>
    <string-array name="list_national">
        <item>Cambodian</item>
        <item>Chinese</item>
        <item>Korean</item>
        <item>English</item>
        <item>Thailand</item>
        <item>Vietname</item>
    </string-array>
    <string name="your_balance"> Total Point </string>
    <string name="madayi_news"> MEDAYI NEWS </string>
    <string name="medayi_share"> MEDAYI Sharing </string>
    <string name="text_view">Hello! Welcome to join Meday Slide. \n\n We start Beta Service from 26, Sep ,2016.</string>
    <string name="find_money"> EXCHANGE MONEY </string>
    <string name="hangtom">  HANGTOM </string>
    <string name="top_up"> TOP UP </string>
    <string name="unlock_scr"> Unlock screen </string>
    <string name="acc_manage"> Account Management </string>
    <string name="contact"> Contact Us </string>
    <string name="chnage_lan"> Change Langauge </string>
    <string name="recommend"> Recommend </string>
    <string name="ad_inqui"> Advertising Inquiry </string>
    <string name="how_to_use"> How to use App </string>
    <string name="privacy1"> Privacy Statement </string>
    <string name="terms_of_use"> Terms of Use </string>
    <string name="enter_new_pwd"> Please enter a password </string>
    <string name="pwd_title"> PASSWORD </string>
    <string name="your_balance2"> YOUR BALANCE </string>
    <string name="balance"> BALANCE </string>
    <string name="pls_enter_point"> Please enter your point found. </string>
    <string name="intro_balance"> From 80,000 Points can be withdrawn.\n(4000 points - $1.00)  </string>
    <string name="Withdrawal_will"> Point will convert to money </string>
    <string name="pls_enter_wing"> Please select withdraw company</string>
    <string name="confirm"> Confirm </string>
    <string name="my_info"> My Info </string>
    <string name="acc_man"> Account Management </string>
    <string name="change_pwd"> Change Password </string>
    <string name="forget_pwd"> Forget password </string>
    <string name="my_infor"> My Information </string>
    <string name="name"> Name </string>
    <string name="id"> ID </string>
    <string name="phone"> Phone </string>
    <string name="dob"> Date of birth </string>
    <string name="sex"> Sex </string>
    <string name="city"> City </string>
    <string name="ok"> OK </string>
    <string name="chnage_pwd"> CHANGE PASSWORD </string>
    <string name="new_pwd"> New password </string>
    <string name="con_pwd"> Confirm password </string>
    <string name="for_pwd"> FORGET PASSWORD </string>
    <string name="pls_enter_id"> Please enter your ID </string>
    <string name="pls_enter_phone"> Please enter your phone number </string>
    <string name="re_com"> RECOMMEND </string>
    <string name="pls_recommend_id"> Please enter a recommend ID </string>
    <string name="sen_email"> SEND EMAIL </string>
    <string name="to"> To :  </string>
    <string name="subject"> Subject : </string>
    <string name="ad"> Advertising </string>
    <string name="msg"> Message : </string>
    <string name="send"> SEND </string>
    <string name="skip"> SKIP </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_text">Are you sure to buy this top up? </string>
    <string name="confirm_pass">Notice</string>
    <string name="fill_pass">Fill your password here</string>
    <string name="cancel">CANCEL</string>
    <string name="my_point_ex"> [MY POINTS] </string>
    <string name="Point_History_ex"> Explain </string>
    <string name="used_point_ex"> [USED POINTS] </string>
    <string name="unlock_point_ex"> [UNLOCK POINTS] </string>
    <string name="regis_point_ex"> [RESGISTER POINT] </string>
    <string name="recom_point_ex"> [RECOMMEND POINTS] </string>
    <string name="medayi_gift_ex"> [MEDAYI GIFT] </string>
    <string name="action_point_ex"> [ACTION POINTS] </string>
    <string name="my_point_ex_de"> The points that you can use it now. </string>
    <string name="used_point_ex_de"> The points that you used before. </string>
    <string name="unlock_point_ex_de"> The points taken by unlock screen. </string>
    <string name="regis_point_ex_de"> The points taken by registered at first time. </string>
    <string name="recom_point_ex_de"> The points taken by recommended. </string>
    <string name="medayi_gift_ex_de"> The points taken by medayi\'s gift. </string>
    <string name="action_point_ex_de"> The points taken by watching the video, moving the web and install the application included in the adverting. </string>
</resources>