<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="350dp"
    tools:context="com.askhmer.lockscreen.tutorials.ChooseLanguage"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/li_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:padding="15dp">

            <TextView
                android:id="@+id/txt_card_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:text="@string/confirm_pass"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DEDEDE"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/Color_DarkRed"
                    android:textSize="16dp"
                    android:text="@string/note_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/ed_password"
                    android:hint="@string/fill_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:paddingRight="15dp"
            android:gravity="right|center">

            <Button
                android:layout_marginRight="10dp"
                android:id="@+id/bttn_cancel"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:background="@drawable/btn_selector" />

            <Button
                android:id="@+id/bttn_buy"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:background="@drawable/btn_selector" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
