<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.askhmer.mobileapp.activity.Information">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:background="@drawable/border_shadow"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:src="@drawable/icon_edit_text"
                        android:scaleType="fitCenter"/>
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:src="@drawable/list2"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/please_rememer_id"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:padding="15dp"
                    android:gravity="center_horizontal">

                    <!--cash silde id-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medayi_id"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"/>

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:background="@color/btn_tap_off"/>
                    <EditText
                        android:id="@+id/e_cash_id"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:background="@drawable/radius_ed"/>
                    <View
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@color/btn_tap_off"/>

                    <TextView
                        android:id="@+id/ve_slide_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pwd_4_char_sy"
                        android:visibility="gone"
                        android:textColor="@android:color/holo_red_dark" />

                    <!--password-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pwd"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"/>

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:background="@color/btn_tap_off"/>
                    <EditText
                        android:id="@+id/e_password"
                        android:hint="@string/pwd_4_char"
                        android:textColorHint="@color/hintColor"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:inputType="textPassword"
                        android:background="@drawable/radius_ed"/>
                    <View
                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@color/btn_tap_off"/>

                    <TextView
                        android:id="@+id/ve_pass_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pwd_4_char"
                        android:visibility="gone"
                        android:textColor="@android:color/holo_red_dark"/>


                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:background="@color/btn_tap_off"/>
                    <EditText
                        android:id="@+id/e_con_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:inputType="textPassword"
                        android:background="@drawable/radius_ed"
                        android:textColorHint="@color/hintColor"
                        android:hint="@string/conf_pwd"/>
                    <View
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@color/btn_tap_off"/>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:gravity="center">

                        <Button
                            android:id="@+id/bttn_next"
                            android:layout_width="170dp"
                            android:layout_height="40dp"
                            android:text="@string/next"
                            android:textColor="@color/white"
                            android:background="@drawable/btn_selector"
                            android:layout_gravity="bottom"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>



</LinearLayout>

